# mainmatter-website-mailer

./: Cargo.toml  README.md  package.json  pnpm-lock.yaml  wrangler.toml
.github/workflows/: ci.yml  release.yml
src/: lib.rs
tests/: send_message.rs
